--- a/DSCI_531_Final_Project_Barnes_Hansen_Nag_Notebook.ipynb
+++ b/DSCI_531_Final_Project_Barnes_Hansen_Nag_Notebook.ipynb
@@ -13,7 +13,7 @@
    },
    "outputs": [],
    "source": [
-    "# Ginny Barnes, Peyton Hansen, Akriti Nag\n",
+    "# Ginny Barnes, Peyton Hansen, Aakriti Nag\n",
     "# DSCI 531\n",
     "# Final Project\n",
     "# Racial Bias in Hospitalization Time Predictions\n"
