--- a/DSCI_531_Final_Project_Barnes_Hansen_Nag_Notebook.ipynb
+++ b/DSCI_531_Final_Project_Barnes_Hansen_Nag_Notebook.ipynb
@@ -107,8 +107,8 @@
    "execution_count": 5,
    "outputs": [],
    "source": [
-    "diabeticDF = diabeticDF[['race', 'gender', 'age', 'admission_type_id', 'num_procedures', 'number_diagnoses','num_medications', 'time_in_hospital']]\n",
-    "hospitalDF = hospitalDF[['ethnicity', 'gender', 'age', 'admit_type', 'NumProcs', 'NumDiagnosis', 'NumRx', 'LOSdays']]"
+    "#diabeticDF = diabeticDF[['race', 'gender', 'age', 'admission_type_id', 'num_procedures', 'number_diagnoses','num_medications', 'time_in_hospital']]\n",
+    "#hospitalDF = hospitalDF[['ethnicity', 'gender', 'age', 'admit_type', 'NumProcs', 'NumDiagnosis', 'NumRx', 'LOSdays']]"
    ],
    "metadata": {
     "collapsed": false,
@@ -235,7 +235,27 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "print()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "15ba81479e011026"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# pre-processing notes\n",
+    "# age?\n",
+    "# determine which factors in UCI data will be important in prediction\n",
+    "# getting rid of nulls, outliers etc\n",
+    "# plot outliers just to see, iqr\n",
+    "# make models with race, without race, equal sampling of races\n",
+    "# do to both\n"
+   ],
    "metadata": {
     "collapsed": false
    },
